Google Calendar - small fix in scrollbar

--- a/public/src/app/app-common.scss
+++ b/public/src/app/app-common.scss
@@ -9691,8 +9691,8 @@ div.db-chooser{
 }
 
 .gcal-content-body{
-	max-height: 300px;
-	overflow-y: scroll;
+	max-height: 400px;
+	overflow-y: auto;
 	overflow: -moz-scrollbars-vertical; 
 }
 
